Added index view first divs from general layout

--- a/Blog/app/Resources/views/blog/index.html.twig
+++ b/Blog/app/Resources/views/blog/index.html.twig
@@ -3,17 +3,44 @@
 {% block main %}
     <div class="container body-content">
         <div class="row">
-            {% for category in categories %}
-                <div class="col-md-6">
-                    <header>
-                        <h2>
-                            <a href="{{ path('category_articles', {'id': category.id}) }}">
-                                {{ category.name }} ({{ category.articles.count }})
-                            </a>
-                        </h2>
-                    </header>
+            <div class="col-md-2">
+                <h2>List</h2>
+                {% for category in categories %}
+                    <div class="col-md-10">
+                        <ul>
+                            <li>
+                                <a href="{{ path('category_articles', {'id': category.id}) }}">
+                                    {{ category.name }} ({{ category.articles.count }})</a>
+                            </li>
+                        </ul>
+                    </div>
+                {% endfor %}
+            </div>
+            <div class="col-md-10">
+                <div class="col-md-10">
+                    <h1>Pinned article</h1>
                 </div>
-            {% endfor %}
+                    <div class="col-md-10">
+                        <table>
+                            <tr>
+                                <td>
+                                    <a href="https://softuni.bg"><img src="{{ asset('images/test-image.png') }}" alt="Test image"  /></a>
+                                </td>
+                                <td>
+                                    <img src="{{ asset('images/test-image.png') }}" alt="Test image" />
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <img src="{{ asset('images/test-image.png') }}" alt="Test image" />
+                                </td>
+                                <td>
+                                    <img src="{{ asset('images/test-image.png') }}" alt="Test image" />
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+            </div>
         </div>
     </div>
 {% endblock %}
