Functionality - map, front images, pinned article (part)

--- a/Blog/app/Resources/views/blog/index.html.twig
+++ b/Blog/app/Resources/views/blog/index.html.twig
@@ -19,27 +19,49 @@
             <div class="col-md-10">
                 <div class="col-md-10">
                     <h1>Pinned article</h1>
+                        {% for category in categories %}
+                            {% if category.name == "Featured" %}
+                                {% for article in category.name %}
+                                    <article>
+                                        <header>
+                                            <h2>{{ article.title }}</h2>
+                                        </header>
+                                        <p>
+                                            {{ article.content }}
+                                        </p>
+                                        <small class="author">
+                                            {{ article.author }}
+                                        </small>
+                                    </article>
+                                {% endfor %}
+                            {% endif %}
+                        {% endfor %}
                 </div>
                     <div class="col-md-10">
-                        <table>
-                            <tr>
-                                <td>
-                                    <a href="https://softuni.bg"><img src="{{ asset('images/test-image.png') }}" alt="Test image"  /></a>
-                                </td>
-                                <td>
-                                    <img src="{{ asset('images/test-image.png') }}" alt="Test image" />
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <img src="{{ asset('images/test-image.png') }}" alt="Test image" />
-                                </td>
-                                <td>
-                                    <img src="{{ asset('images/test-image.png') }}" alt="Test image" />
-                                </td>
-                            </tr>
-                        </table>
+                        {% embed "blog/front-images.html.twig" %}
+                        {% endembed %}
                     </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-2">
+                <h2>List</h2>
+                {% for category in categories %}
+                    <div class="col-md-10">
+                        <ul>
+                            <li>
+                                <a href="{{ path('category_articles', {'id': category.id}) }}">
+                                    {{ category.name }} ({{ category.articles.count }})</a>
+                            </li>
+                        </ul>
+                    </div>
+                {% endfor %}
+            </div>
+            <div class="col-md-10">
+                {% embed "blog/map.html.twig" %}
+                {% endembed %}
+
+
             </div>
         </div>
     </div>
