--- a/Blog/app/Resources/views/article/list.html.twig
+++ b/Blog/app/Resources/views/article/list.html.twig
@@ -28,7 +28,7 @@
                         <footer>
                             <div class="pull-right">
                                 <a class="btn btn-default btn-xs"
-                                   href="{{ path('article_view', {'id': article.id}) }}">Read more &raquo;</a>
+                                   href="{{ path('article_view', {'id': article.id}) }}">Прочети още &raquo;</a>
                             </div>
                         </footer>
                     </article>
